Agentic based updates